k8s/li-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: li-client-deployment
    namespace: linkedin
spec:
    replicas: 3

    selector:
        matchLabels:
            component: web

    template:
        metadata:
            labels:
                component: web
        spec:
            containers:
                - name: client
                  image: orhanors/linkedin-client
                  ports:
                      - containerPort: 3000
