k8s/li-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: li-server-deployment
    namespace: linkedin

spec:
    replicas: 3

    selector:
        matchLabels:
            component: server

    template:
        metadata:
            labels:
                component: server

        spec:
            containers:
                - name: server
                  image: orhanors/linkedin-server
                  ports:
                      - containerPort: 3001
