k8s/li-client-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
    name: li-client-clusterip
    namespace: linkedin
spec:
    type: ClusterIP
    selector:
        component: web
    ports:
        - port: 3000
          targetPort: 3000
