k8s/li-server-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
    name: li-server-clusterip
    namespace: linkedin

spec:
    type: ClusterIP
    selector:
        component: server
    ports:
        - port: 3001
          targetPort: 3001
