k8s/li-ingress.yaml
apiVersion: networking.k8s.io/v1beta1

kind: Ingress
metadata:
    name: ingress-service
    namespace: linkedin
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: "true"
        #nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
    rules:
        - http:
              paths:
                  - path: /?(.*)
                    backend:
                        serviceName: li-client-clusterip
                        servicePort: 3000
                  - path: /api/?(.*)
                    backend:
                        serviceName: li-server-clusterip
                        servicePort: 3001
